# pyusb_libusb1_backend

./: .gitignore  MANIFEST.in  README.md  copy_libusb.sh  libusb_py_stub.c  setup.cfg  setup.py
.github/workflows/: wheels.yml
pyusb_libusb1_backend/: __init__.py
tests/: test_basic.py
