[metadata]
name = pyusb_libusb1_backend
version = 0.0.1
description = Portable pyusb libusb1 backend.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/morinted/pyusb_libusb1_backend
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover

[options]
zip_safe = False
python_requires = >=3.6
install_requires=
	pyusb
packages =
	pyusb_libusb1_backend

# vim: commentstring=#\ %s list
